#784 Fix page overflow

--- a/app/assets/stylesheets/interapptive.css.less
+++ b/app/assets/stylesheets/interapptive.css.less
@@ -31,6 +31,10 @@ html, body{
   background-color: white;
 }
 
+body {
+  overflow: hidden;
+}
+
 #main {
   border: none;
   padding: 20px;
